[gd_scene load_steps=7 format=3 uid="uid://pfvy78ys0l41"]

[ext_resource type="Script" uid="uid://crus5jtuo5p0r" path="res://ui/interact_prompt/interact_prompt.gd" id="1_lnrbs"]
[ext_resource type="Texture2D" uid="uid://dqm6r0kraajyj" path="res://assets/free-top-down-roguelike-game-kit-pixel-art-craftpix-net-436971/4 GUI/1 Interface/TileMap8.png" id="2_qs0jb"]
[ext_resource type="Texture2D" uid="uid://dvvmh0mqqadt6" path="res://assets/ui/icons/buttons/e_button.png" id="3_vq7s3"]
[ext_resource type="LabelSettings" uid="uid://brbf5lml7xnsv" path="res://ui/pixel_label_settings.tres" id="4_7litb"]
[ext_resource type="PackedScene" uid="uid://b5vhqs876o4tm" path="res://ui/animated_icons/coin_icon.tscn" id="5_1knwg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mq706"]
border_width_bottom = 2
border_color = Color(0.09411765, 0.078431375, 0.14509805, 0.627451)

[node name="InteractPrompt" type="PanelContainer"]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -17.0
offset_right = 17.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mq706")
script = ExtResource("1_lnrbs")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_qs0jb")
region_rect = Rect2(16, 80, 48, 16)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ButtonIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("3_vq7s3")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ActionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HIRE"
label_settings = ExtResource("4_7litb")

[node name="ActionIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[node name="CostSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/CostSection"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("4_7litb")

[node name="CoinIcon" parent="MarginContainer/VBoxContainer/CostSection" instance=ExtResource("5_1knwg")]
layout_mode = 2

[node name="FxContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="FlashColor" type="ColorRect" parent="FxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DisableOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.09320182, 0.07846785, 0.14733289, 0.65000004)

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
